# desktop_dye

./: .gitignore  Cargo.toml  LICENSE  README.md
api/: Cargo.toml  README.md
api/assets/: default_config.yaml
api/src/: lib.rs
api/src/config/: mod.rs
api/src/functions/: calculate_dominant_colors.rs  capture_pixels.rs  color_conversion.rs  get_colors.rs  mod.rs
api/src/models/: colors.rs
cli/: Cargo.toml  README.md
cli/src/: main.rs
desktop_dye_cli/: Cargo.toml
desktop_dye_cli/assets/: default_config.yaml
desktop_dye_cli/src/: main.rs
desktop_dye_cli/src/config/: mod.rs
desktop_dye_cli/src/functions/: calculate_dominant_colors.rs  capture_and_submit.rs  capture_pixels.rs  color_conversion.rs  mod.rs  print_title.rs
desktop_dye_cli/src/progress/: mod.rs
home_assistant_api/: Cargo.toml
home_assistant_api/src/: constants.rs  lib.rs
