[package]
name = "home_assistant_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.69", features = ["backtrace"] }
const_format = "0.2.30"
reqwest = { version = "0.11.13", features = ["json"] }
serde = "1.0.151"
serde_json = "1.0.91"
sprintf = "0.1.3"
tokio = { version = "1.23.0", features = ["full"] }
